# scrapper_rs

./: Cargo.toml  Readme.md
entity/: Cargo.toml
entity/src/: enums.rs  lib.rs  page.rs
migration/src/: lib.rs  m20240214_090547_create_pages_table.rs
migrations/: 20240215164521_create_pages_table.sql
src/: main.rs  page.rs  page_type.rs  site.rs
src/ext_web/: ext_web.rs  helper.rs  jfl.rs  mod.rs  models.rs
src/scrapper/: scrapper.rs
src/server/: routes.rs  server.rs
