[package]
name = "scrapper_rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
chrono = "0.4.34"
entity = { path = "entity" }
migration = { path = "migration" }
reqwest = { version = "0.11.24", features = ["blocking"] }
roxmltree = "0.19.0"
sea-orm = { version = "^0.12.14", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
select = "0.6.0"
serde = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }

