[package]
name = "scrapper_rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
dotenvy = "0.15.7"
reqwest = { version = "0.11.24", features = ["blocking"] }
roxmltree = "0.19.0"
select = "0.6.0"
serde = "1.0.196"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid", "json", "time", "macros", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
prost = "0.11.9"
prost-build = "0.11.0"
prost-types = "0.11.9"
prost-wkt-build = "0.4.1"
prost-wkt-types = "0.4.1"
tonic-build = "0.9.2"
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid", "json", "time", "macros", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
